# Wc3LiquiWhineTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WhineSolution.sln
DataAnalyzer/: DataAnalyzer.vcxproj  DataAnalyzer.vcxproj.filters  Record.cpp  Record.h  main.cpp
DataPuller/: CsvReader.cpp  DataPuller.vcxproj  DataPuller.vcxproj.filters  Record.h  RecordLoader.cpp  RecordLoader.h  main.cpp
Dataset/: liquipedia1.32.9allgames.csv  liquipedia1.32.9allgames.xlsx  liquipedia1.32.9allgames_with_dates.csv  liquipedia1.32.9allgames_with_dates.xlsx
